--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
+    "react-time-picker": "^6.6.0",
     "sort-by": "^1.2.0",
     "swedish-holidays": "^1.1.2",
     "uuidv4": "^6.2.13"
