--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "date-fns": "^3.1.0",
+    "dotenv": "^16.4.5",
     "holidays-nordic": "^0.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
