--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-router": "^0.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "path": "^0.12.7",
+    "url": "^0.11.3"
   }
 }
