--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-time-picker": "^6.6.0",
     "sort-by": "^1.2.0",
     "swedish-holidays": "^1.1.2",
+    "tw-elements": "^2.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
